<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:text="@string/login"
            android:textColor="#620073"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_name"
            android:layout_marginTop="@dimen/margin_container" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container"
            android:ems="10"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container"
            android:ems="10"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container"
            android:ems="10"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container"
            android:ems="10"
            android:hint="@string/bio" />

        <EditText
            android:id="@+id/occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container"
            android:ems="10"
            android:hint="@string/occupation" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:text="Date of Birth" />

        <Button
            android:id="@+id/btPickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dob"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:text="Pick Date" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="Submit"
            android:onClick="submitForm"/>

    </LinearLayout>
</ScrollView>